--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=bazar
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/bazar_todo_code?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=gqc2Wm!FoQxJ
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# Mostrar consultas SQL en logs (para debug)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
